variable length args

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,14 @@
           <h5 class="h5">Picture Three</h5>
         </div>
       </div>
+      <div class="boxes">
+        <form class="form" action="index.html" method="post">
+          <h2 class="h5">Contact Info:</h2>
+          <input class="address" type="text" name="" value="" placeholder="Address" />
+          <input class="name" type="text" name="" value="" placeholder="Name" />
+          <input class="zip" type="text" name="" value="" placeholder="Zip" />
+        </form>
+      </div>
     </main>
   </body>
 </html>
