@content at-rule

--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,13 @@
       </div>
       <div class="boxes">
         <div class="buttons">
+          <h5 class="h5">Content block @content at-rule</h5>
           <button type="button" name="button" class="btn">Button</button>
+        </div>
+      </div>
+      <div class="boxes">
+        <div class="particles">
+          <div class="particle"></div>
         </div>
       </div>
     </main>
